fix chat room spacing

--- a/css/inner/edit-project-settings.less
+++ b/css/inner/edit-project-settings.less
@@ -305,16 +305,17 @@ form.expando {
   // Chatrooms Page
   .chat-rooms {
     .clearfix();
+    margin-top: 1em;
   }
   .chat-room-item {
     width: 21em;
     min-height: 34em;
     .outlineFlat();
-    margin: 1em;
     border-radius: 4px;
     padding: 0;
     float: left;
     position: relative;
+    margin: 0 1em 1em 0;
     &:hover {
       [class^=chat-i] {
         &:before, &:after { transition-duration: .2s;}
